icone activity type

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -702,3 +702,9 @@ $maxWidth : 400px;
 .btn-dashboard-publish:focus {
   outline: none;
 }
+
+.icon-100 {
+  width: 100px;
+  height: 100px;
+  margin-right: 1rem;
+}
