--- a/app/Resources/views/activity_type/new.html.twig
+++ b/app/Resources/views/activity_type/new.html.twig
@@ -11,6 +11,7 @@
         <div class="card-body">
             {{ form_row(form.label) }}
             {{ form_row(form.activityModes) }}
+            {{ form_row(form.icon) }}
         </div>
         <!-- /.card-body -->
 
