--- a/app/Resources/views/course_info/view/student_objectives.html.twig
+++ b/app/Resources/views/course_info/view/student_objectives.html.twig
@@ -7,7 +7,7 @@
             <div class="student-subtitle">
                 <span class="text-bold">{{ 'app.view.student.objectives.achievements_description' | trans }}</span>
             </div>
-            <ul class="student-list list-dotted text-primary">
+            <ul class="student-list list-dotted">
                 {% if courseInfo.courseAchievements is not empty %}
                     {% for achievement in courseInfo.courseAchievements %}
                         <li>
