commented the "ask_advice" in dashboard

--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -195,7 +195,7 @@
 
         </div>
 
-        <div class="mt-2 d-flex flex-row justify-content-center w-100">
+{#        <div class="mt-2 d-flex flex-row justify-content-center w-100">
             <button type="button"
                     class="btn btn-outline-secondary modal-action btn-dashboard-ingeneer border-0"
                     data-action-title="{{ 'app.dashboard.ask_advice_syllabus' | trans }}"
@@ -203,7 +203,7 @@
                 <img class="mr-3" src="{{ asset('/build/images/Avis.png') }}" style="width: 10%;">
                 <span class="label-dashboard">{{ 'app.dashboard.button.advice' | trans }}</span>
             </button>
-        </div>
+        </div>#}
     </div>
 </div>
 
