fixes of last update except filters length

--- a/app/Resources/views/course_info/view/student_activities.html.twig
+++ b/app/Resources/views/course_info/view/student_activities.html.twig
@@ -49,7 +49,7 @@
                                         <span>
                                         {{ courseSectionActivity.activity.label }}
                                             {% if courseSectionActivity.description is not empty %}
-                                                : {{ courseSectionActivity.description }}
+                                                : {{ courseSectionActivity.description | linkify({"attr": {"target": "_blank"}}) | raw }}
                                             {% endif %}
                                         </span>
                                         {% if courseSectionActivity.evaluable == true %}
