--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -145,16 +145,9 @@
                     {{ form_end(publicationForm) }}
                 </div>
             {% else %}
-                <div class="px-2 m-3 btn-dashboard-publish">
-                    {{ form_start(publicationForm, {'attr' : {
-                        'data-url' : path('app.course_info.dashboard.publish', {id : courseInfo.id})
-                    }}) }}
-                    <button type="button"
-                            class="btn-dashboard-publish btn_publish d-flex flex-column align-items-center justify-content-between w-100 h-100 border-0">
-                        <span class="py-3 label-dashboard">{{ 'app.dashboard.card.publish_success' | trans }}</span>
-                        <img src="{{ asset('/build/images/Drapeau.png') }}" style="width: 40%;">
-                    </button>
-                    {{ form_end(publicationForm) }}
+                <div class="px-2 m-3 btn-dashboard-publish d-flex flex-column align-items-center justify-content-between">
+                    <span class="py-3 label-dashboard">{{ 'app.dashboard.card.publish_success' | trans }}</span>
+                    <img src="{{ asset('/build/images/Drapeau.png') }}" style="width: 40%;">
                 </div>
             {% endif %}
 
@@ -195,7 +188,7 @@
 
         </div>
 
-{#        <div class="mt-2 d-flex flex-row justify-content-center w-100">
+        {#        <div class="mt-2 d-flex flex-row justify-content-center w-100">
             <button type="button"
                     class="btn btn-outline-secondary modal-action btn-dashboard-ingeneer border-0"
                     data-action-title="{{ 'app.dashboard.ask_advice_syllabus' | trans }}"
@@ -250,23 +243,19 @@
 
     let stopPropagation = false;
     $(document).on('click', '.btn_publish', function (e) {
-        if (stopPropagation) {
-            stopPropagation = false;
-            return;
-        }
-
-        let button = $(this);
-        let form = button.closest('form');
+        let form = $(this).closest('form');
         let data = form.serialize();
 
-        $.post(form.data('url'), data)
-            .done(function (data) {
-                if (data.error) {
-                    $('#publish_error').text(data.message);
-                    stopPropagation = true;
-                } else {
-                    document.location.reload(true);
-                }
+        $.post(form.data('url'), data).done(function (data) {
+            let icon = data.status ? 'success' : 'error'
+            let onAfterClose =
+
+            Swal.fire({
+                'text': data.message,
+                'icon': icon,
+            }).then((result) => {
+                if(data.status) document.location.reload(true);
             });
+        });
     });
 </script>
