--- a/app/Resources/views/course_info/published/published.html.twig
+++ b/app/Resources/views/course_info/published/published.html.twig
@@ -10,7 +10,9 @@
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'a.label') }}</th>
                         <th class="sortable">{{ 'admin.published_syllabus.type' | trans }}</th>
-                        <th class="sortable text-center">{{ 'admin.published_syllabus.establishment_code' | trans }}</th>
+                        <th class="sortable">{{ 'admin.published_syllabus.establishment_code' | trans }}</th>
+                        <th class="sortable">{{ 'admin.published_syllabus.publisher' | trans }}</th>
+                        <th class="sortable">{{ 'admin.published_syllabus.publication_date' | trans }}</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -24,6 +26,12 @@
                             </td>
                             <td>
                                 {{ courseInfo.course.code }}
+                            </td>
+                            <td>
+                                {{ courseInfo.publisher }}
+                            </td>
+                            <td>
+                                {{ courseInfo.publicationDate|localizeddate('full', 'none', null) }} {{ courseInfo.publicationDate|date('H:i') }}
                             </td>
                         </tr>
                     {% endfor %}
