prerequisites not mandatory

--- a/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
+++ b/app/Resources/views/course_info/prerequisite/view/prerequisite.html.twig
@@ -1,6 +1,6 @@
 {% if courseInfo.coursePrerequisites is empty %}
-    <div class="d-flex justify-content-center align-items-center mandatory-data">
-                    <span class="empty-data">{{ 'app.prerequisites.view.empty_prerequisite' | trans }}</span>
+    <div class="d-flex justify-content-center align-items-center">
+        <span class="empty-data">{{ 'app.prerequisites.view.empty_prerequisite' | trans }}</span>
     </div>
 {% else %}
     <table class="table table-hover">
