added title on student view

--- a/app/Resources/views/course_info/view/student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/student_presentation.html.twig
@@ -1,6 +1,7 @@
 <section id="presentation-section" class="pb-5">
     <div class="student-title">
-        <h1>{{ 'app.view.student.tabs.presentation' | trans }}</h1>
+        <h1 class="mb-0">{{ 'app.view.student.tabs.presentation' | trans }}</h1>
+        <h5 class="mb-3">{{ courseInfo.title }}</h5>
     </div>
     <div class="presentation-info row p-4">
         <div class="presentation-info-element col-12 col-lg-4 col-md-6 col-sm-12">
