Quick easy fixes

--- a/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/view/dashboard.html.twig
@@ -10,13 +10,9 @@
                         <p>
                             {{ 'app.dashboard.intro_panel.description' | trans }}
                         </p>
-                        <button type="button" id="btn-tuto" class="btn btn-info">
+                        <a href="https://unspod.unice.fr/video/7110-comment-remplir-son-syllabus-sur-moodle/" target="_blank" class="btn btn-info">
                             {{ 'app.dashboard.intro_panel.access_tutorial' | trans }}
-                        </button>
-                        <br>
-                        <span id="span-tuto" class="font-italic">
-                            {{ 'app.dashboard.intro_panel.tutorial_description' | trans | raw }}
-                        </span>
+                        </a>
                     </div>
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <img style="width: 120px;" src={{ asset('/build/images/Prof_syllabus.png') }}>
