--- a/app/Resources/views/course_info/view/student_presentation.html.twig
+++ b/app/Resources/views/course_info/view/student_presentation.html.twig
@@ -137,7 +137,7 @@
                 {% if not loop.first %}
                     ,
                 {% endif %}
-                {{ teacher.firstname }} {{ teacher.lastname }}
+                {{ teacher.firstname }} {{ teacher.lastname }} {% if teacher.emailVisibility and teacher.email is not null %}({{ teacher.email }}){% endif %}
             {% endfor %}
             </span>
         </div>
