--- a/app/Resources/views/course_info/evaluation/evaluation.html.twig
+++ b/app/Resources/views/course_info/evaluation/evaluation.html.twig
@@ -3,6 +3,16 @@
 {% block subContent %}
     <div class="pt-3">
         <section>
+            <div class="card mb-5">
+                <div class="card-body" style="background-color: #D3EAF0;">
+                    <div class="row">
+                        <div class="text-center">
+                            {{ 'app.evaluation.view.mcc_informations' | trans }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="card">
                 <div class="card-header text-center bg-gradient-primary">
                     <h5 class="text-bold">
