--- a/app/Resources/views/course_info/view/student_equipments.html.twig
+++ b/app/Resources/views/course_info/view/student_equipments.html.twig
@@ -4,9 +4,8 @@
         <img src="{{ asset('build/images/materiel_photo.jpg') }}" alt="">
     </div>
 
-    <div class="student-grid">
         {% if courseInfo.bibliographicResources is not empty %}
-            <div class="grid-element">
+            <div class="mb-4">
                 <div class="student-subtitle mb-3">
                     <img src="{{ asset('build/images/biblio_picto.png') }}" class="icon-40" alt="">
                     <h5 class="title-underlined">{{ 'app.view.student.equipments.bibliographic_resources' | trans }}</h5>
@@ -17,7 +16,7 @@
             </div>
         {% endif %}
         {% if courseInfo.educationalResources is not empty %}
-            <div class="grid-element">
+            <div class="mb-4">
                 <div class="student-subtitle mb-3">
                     <img src="{{ asset('build/images/biblio_picto.png') }}" class="icon-40" alt="">
                     <h5 class="title-underlined">{{ 'app.view.student.equipments.educational_resources' | trans }}</h5>
@@ -27,32 +26,4 @@
                 </div>
             </div>
         {% endif %}
-        {% if courseInfo.courseResourceEquipments is not empty %}
-            <div class="grid-element">
-                <div class="student-subtitle mb-3">
-                    <img src="{{ asset('build/images/materiel_picto.png') }}" class="icon-40" alt="">
-                    <h5 class="title-underlined">{{ 'app.view.student.equipments.required_equipments' | trans }}</h5>
-                </div>
-                <ul class="student-list">
-                    {% for resourceEquipment in courseInfo.courseResourceEquipments %}
-                        {% if resourceEquipment.equipment.labelVisibility == true or resourceEquipment.description is not null %}
-                            <li>
-                                <i class="fas fa-check"></i>
-                                <div class="d-flex flex-column">
-                                    {% if resourceEquipment.equipment.labelVisibility == true %}
-                                        <span>{{ resourceEquipment.equipment.label }}</span>
-                                        {% if resourceEquipment.equipment.labelVisibility == true %}
-                                            <span class="small font-italic">{{ resourceEquipment.description }}</span>
-                                        {% endif %}
-                                    {% elseif resourceEquipment.equipment.labelVisibility == false and resourceEquipment.description is not null %}
-                                        <span>{{ resourceEquipment.description }}</span>
-                                    {% endif %}
-                                </div>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-            </div>
-        {% endif %}
-    </div>
 </section>
